test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/void/void_equality.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: x
        List[0]: 
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CBinary: 
                  CEqual: 
                  CFunctionCall: 
                    TIdentifier: x
                    List[0]: 
                    None: 
                  CCast: 
                    CConstant: 
                      CConstInt: 
                        TInt: 10
                      None: 
                    Void: 
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
